fix collapse

--- a/assets/style.less
+++ b/assets/style.less
@@ -623,3 +623,6 @@ input[type=number] {
 .ant-pro-global-header-trigger:hover{
   background: @color-8!important;
 }
+.ant-menu.ant-menu-dark, .ant-menu-dark .ant-menu-sub, .ant-menu.ant-menu-dark .ant-menu-sub{
+  background: @color-8!important;
+}
